<?xml version="1.0"?>
<package>
  <name>wallie_one</name>
  <version>0.1.0</version>
  <description>Wallie one</description>

  <maintainer email="platt@hartford.edu">Liam Platt</maintainer>
  <author email="platt@hartford.edu">Liam Platt</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>driver_base</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>stereo_msgs</build_depend>
  <build_depend>create_msgs</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>catkin</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_ros</build_depend>

  <build_depend>zed_wrapper</build_depend>
<run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>driver_base</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
<run_depend>create_msgs</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>nav_msgs</run_depend>
<run_depend>image_geometry</run_depend>
  <run_depend>stereo_msgs</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>catkin</run_depend>
  <run_depend>urdf</run_depend>

  <run_depend>roslint</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>zed_wrapper</run_depend>
</package>
